[CMake] Better way to install Python module and scripts with CMake
So far, the CMake build system tried to figure out the Python install
directory with `find_package(Python REQUIRED COMPONENTS Interpreter)`,
but this was a bit flaky. The conda guys have worked around it, and also
I worked around it on LCG by installing the Python part separately.

To make things work better and simpler, this commit suggests to just
install the Python module to the `python` subdirectory in the install
prefix by default, and it can be changed by the user by setting the
`CMAKE_INSTALL_PYTHONDIR` variable. This is also the same mechanism that
is used in ROOT.

This commit also makes sure that Combine can be used directly from the
build tree, e.g. for the CI. This means less bookkeping of the Python
files outside the CMake configuration.

--- a/.github/actions/run-in-cvmfs/action.yml
+++ b/.github/actions/run-in-cvmfs/action.yml
@@ -32,8 +32,8 @@ runs:
       shell: bash
       run: >-
         source /cvmfs/sft.cern.ch/lcg/views/${LCG_RELEASE}/${LCG_ARCH}/setup.sh;
-        source virtualenv/bin/activate;
         export PATH=$PWD/install/bin:$PATH;
         export LD_LIBRARY_PATH=$PWD/install/lib:$LD_LIBRARY_PATH;
+        export PYTHONPATH=$PWD/install/python:$PYTHONPATH;
         ulimit -s unlimited;
         ${{ inputs.script }}
