Don't require `gtest` on the system
Some older platforms like CentOS 7 don't have `gtest` available in the
right version, and it's also more convenient for the users if they are
not restricted to environments where gtest is installed.

--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -119,7 +119,6 @@ jobs:
         with:
           script: |
             set -euxo pipefail
-            sudo dnf install -y gtest-devel
             mkdir build_test
             cd build_test
             cmake ../test
@@ -135,7 +134,7 @@ jobs:
           script: |
             set -euxo pipefail
             sudo yum install -y epel-release
-            sudo yum install -y cmake3 gtest-devel
+            sudo yum install -y cmake3
             mkdir build_test
             cd build_test
             cmake3 ../test
