[ci] Run ctests from the correct directory
This fixes the problem that no tests were found for the LCG and conda
builds.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,4 +72,4 @@ jobs:
         combine --help > /dev/null
         text2workspace.py --help > /dev/null
         ulimit -s unlimited;
-        ctest --test-dir build --output-on-failure
+        ctest --test-dir build/test --output-on-failure
